# Rust-Websocket-Server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
assets/: genesis_data.json
docs/: api.md  architecture.mermaid  status.md  tasks.md  technical.md
migrations/: 20230101000000_initial_schema.sql
src/: config.rs  genesis.rs  lib.rs  main.rs  routes.rs
src/dev/: mod.rs  test_keys.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs  websocket.rs
src/models/: mod.rs  network.rs  user.rs  websocket.rs
src/services/: mod.rs  network.rs  signature.rs  user.rs
src/storage/: mod.rs
src/storage/memory/: mod.rs  user.rs
src/storage/traits/: mod.rs  network.rs  user.rs
tests/: mod.rs  network_models.rs
tests/models/: user_tests.rs
